--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,8 +5,7 @@ environment:
     - nodejs_version: '4'
 install:
   - ps: Install-Product node $env:nodejs_version
-  - set CI=true
-  - npm -g install npm@latest
+  - npm install --global npm@latest
   - set PATH=%APPDATA%\npm;%PATH%
   - npm install
 matrix:
@@ -17,3 +16,5 @@ test_script:
   - node --version
   - npm --version
   - npm test
+cache:
+  - '%APPDATA%\npm-cache'
