--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 	],
 	"dependencies": {
 		"arch": "^2.1.1",
-		"execa": "^1.0.0"
+		"execa": "^1.0.0",
+		"is-wsl": "^2.0.0"
 	},
 	"devDependencies": {
 		"ava": "^1.4.1",
