--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,10 @@ os:
   - linux
   - osx
   - windows
-dist: xenial
+dist: bionic
 services:
   - xvfb
 language: node_js
 node_js:
   - '10'
   - '8'
-before_script:
-  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; fi'
