chore: Fix lint
Signed-off-by: Richie Bendall <richiebendall@gmail.com>

--- a/package.json
+++ b/package.json
@@ -51,5 +51,16 @@
 			"browser": "./browser.js",
 			"default": "./index.js"
 		}
+	},
+	"xo": {
+		"overrides": [
+			{
+				"files": "browser.js",
+				"env": [
+					"node",
+					"browser"
+				]
+			}
+		]
 	}
 }
