--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"files": [
 		"index.js",
 		"index.d.ts",
+		"browser.js",
 		"lib",
 		"fallbacks"
 	],
@@ -43,5 +44,10 @@
 		"ava": "^2.1.0",
 		"tsd": "^0.10.0",
 		"xo": "^0.25.3"
+	},
+	"browser": "browser.js",
+	"exports": {
+		"browser": "./browser.js",
+		"default": "./index.js"
 	}
 }
